GetAllAccounts handler implemented
