# internal/pkg/delivery/gin/response/available_account.go
@@ -1,0 +1,5 @@
+package response
+
+type AvailableAccount struct {
+	Number string `json:"number" example:"ACC777"`
+}
